fix mobile horizontal overflow

--- a/src/sass/theme/parts/base/_base.scss
+++ b/src/sass/theme/parts/base/_base.scss
@@ -79,6 +79,9 @@
 html {
   box-sizing: border-box;
   overflow-x: hidden;
+  position: relative;
+  margin: 0;
+  padding: 0;
 }
 
 *,
@@ -88,10 +91,14 @@ html {
 }
 
 body {
-  font-family: var(--font-body);
-  font-size: 16px;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  position: relative;
+  font-family: var(--font-body);
+  font-size: 16px;
   color: var(--body-color);
 }
 
